# ardrone_dcs

./: README.md
ardrone_autonomy_pack/: ardrone.launch  ardrone_driver.cpp
ardrone_launch/: CMakeLists.txt  ardrone.rviz  package.xml
ardrone_launch/launch/: control_system.launch  lsd_slam.launch
ardrone_mission_planner/: CMakeLists.txt  package.xml
ardrone_mission_planner/cfg/: MissionPlannerParams.cfg
ardrone_mission_planner/include/: mission_planner.h
ardrone_mission_planner/src/: main.cpp  mission_planner.cpp
ardrone_msgs/: CMakeLists.txt  package.xml
ardrone_msgs/msg/: Mission.msg  Mode.msg  NavPose.msg
ardrone_msgs/srv/: AddMarker.srv  ClearMarkers.srv  DelMarker.srv
ardrone_pid/: CMakeLists.txt  CMakeLists.txt~  package.xml
ardrone_pid/cfg/: PidParams.cfg
ardrone_pid/src/: ardrone_pid.cpp  ardrone_pid.h~  main.cpp
ardrone_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
ardrone_rviz_plugins/include/control_panel/: control_panel.h  ros_thread_cp.h  table_delegate.h  targets_table.h
ardrone_rviz_plugins/include/info_panel/: info_panel.h  ros_thread_ip.h
ardrone_rviz_plugins/include/markers_server/: line_strip.h  markers_server.h
ardrone_rviz_plugins/include/teleop_panel/: ros_thread_tp.h  teleop_panel.h
ardrone_rviz_plugins/src/control_panel/: control_panel.cpp  ros_thread_cp.cpp  table_delegate.cpp  targets_table.cpp
ardrone_rviz_plugins/src/info_panel/: info_panel.cpp  ros_thread_ip.cpp
ardrone_rviz_plugins/src/markers_server/: line_strip.cpp  markers_server.cpp
ardrone_rviz_plugins/src/teleop_panel/: ros_thread_tp.cpp  teleop_panel.cpp
ardrone_teleop/: CMakeLists.txt  package.xml
ardrone_teleop/src/: keyboard_teleop.cpp
