<?xml version="1.0"?>
<package>
  <name>ardrone_msgs</name>
  <version>0.0.0</version>
  <description>The ardrone_msgs package</description>

  <maintainer email="hell14@todo.todo">hell14</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend> 
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
