<?xml version="1.0"?>
<package>
  <name>ardrone_rviz_plugins</name>
  <version>0.0.0</version>
  <description>The ardrone_rviz_plugins package</description>

  <maintainer email="hell14@todo.todo">hell14</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ardrone_msgs</build_depend>
  <build_depend>ardrone_autonomy</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>ardrone_msgs</run_depend>
  <run_depend>ardrone_autonomy</run_depend>

  <export>
	  <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
